# car_recognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.py  main.py
